--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,17 @@
         }
     ],
 
+    "repositories": [
+        {
+            "type": "git",
+            "url": "git@github.com:scorninpc/slim-mvc.git"
+        }
+
+    ],
+
     "require": {
         "slim/slim": "^4.0",
-        "scorninpc/slim-mvc": "^1.0",
+        "scorninpc/slim-mvc": "dev-main",
         "slim/psr7": "^1.5",
         "php-di/php-di": "^6.3",
         "illuminate/database": "^8.20"
